2008-11-16  Michal Ludvig  <michal@logix.cz>

	Merge from 0.9.8.x branch, rel 248:
	* s3cmd: Don't leak open filehandles in sync. Thx Patrick Linskey for report.
	Merge from 0.9.8.x branch, rel 247:
	* s3cmd: Re-raise the right exception.
	Merge from 0.9.8.x branch, rel 246:
	* s3cmd, S3/S3.py, S3/Exceptions.py: Don't abort 'sync' or 'put' on files
	  that can't be open (e.g. Permision denied). Print a warning and skip over
	  instead.
	Merge from 0.9.8.x branch, rel 245:
	* S3/S3.py: Escape parameters in strings. Fixes sync to and 
	  ls of directories with spaces. (Thx Lubomir Rintel from Fedora Project)
	Merge from 0.9.8.x branch, rel 244:
	* s3cmd: Unicode brainfuck again. This time force all output
	  in UTF-8, will see how many complaints we'll get...

2008-09-16  Michal Ludvig  <michal@logix.cz>

	* NEWS: s3cmd 0.9.8.4 released from branches/0.9.8.x SVN branch.

2008-09-16  Michal Ludvig  <michal@logix.cz>

	* S3/S3.py: Don't run into ZeroDivisionError when speed counter
	  returns 0s elapsed on upload/download file.

2008-09-15  Michal Ludvig  <michal@logix.cz>

	* s3cmd, S3/S3.py, S3/Utils.py, S3/S3Uri.py, S3/Exceptions.py:
	  Yet anoter Unicode round. Unicodised all command line arguments 
	  before processing.

2008-09-15  Michal Ludvig  <michal@logix.cz>

	* S3/S3.py: "s3cmd mb" can create upper-case buckets again
	  in US. Non-US (e.g. EU) bucket names must conform to strict
	  DNS-rules.
	* S3/S3Uri.py: Display public URLs correctly for non-DNS buckets.

2008-09-10  Michal Ludvig  <michal@logix.cz>

	* testsuite, run-tests.py: Added testsuite with first few tests.

2008-09-10  Michal Ludvig  <michal@logix.cz>

	* s3cmd, S3/S3Uri.py, S3/S3.py: All internal representations of
	  S3Uri()s are Unicode (i.e. not UTF-8 but type()==unicode). It 
	  still doesn't work on non-UTF8 systems though.

2008-09-04  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Rework UTF-8 output to keep sys.stdout untouched (or it'd
	  break 's3cmd get' to stdout for binary files).
