@@ -48,6 +48,9 @@ class S3UploadError(S3Exception):
 class S3DownloadError(S3Exception):
 	pass
 
+class S3RequestError(S3Exception):
+	pass
+
 class InvalidFileError(S3Exception):
 	pass
 
